--- a/index.html
+++ b/index.html
@@ -435,6 +435,15 @@
                     margin-bottom:20px;
                     top: 20px;
                 }
+                #CurrentInitiatives{
+                    top:1680px;
+                }
+                #InProgress{
+                    top:1720px;
+                }
+                #Initiatives{
+                    top:1750px
+                }
             }       
             @media screen and (max-width: 920px) { 
                 #halftone, .BannerButtons, .CustomLeaf {
