--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             .TransparentBoxes{
                 background-color:rgba(220,220,220,0.2);
                 color: #fff;
-                height: 43vh;
+                height: 600px;
                 width: 24vw;
                 position: relative;
                 margin-top: 0.1%;
@@ -421,15 +421,15 @@
                     float:left;
                     clear:both;
                     margin-left: 10% !important;
-                    margin-bottom:15px;
+                    margin-bottom:-15px;
                     left:0;
                 }
                 .TransparencyGradients{
                     display:none;
                 }
                 .MiniFooter{
-                    top:calc(73.8% + 14px);
-                    margin-right:23px;
+                    top:calc(73.8% + 19px);
+                    margin-right:13px;
                     width: 100%;
                     width: -moz-available;   
                     width: -webkit-fill-available;  
@@ -441,8 +441,8 @@
                     width: -moz-available;   
                     width: -webkit-fill-available;  
                     width: fill-available;
-                    left:20px;
-                    top:20px;
+                    left:10px;
+                    top:10px;
                     height:73.8%;
                     line-height:0.89;
                 }
