--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     top:1720px;
                 }
                 #Initiatives{
-                    top:1750px
+                    top:1800px
                 }
             }       
             @media screen and (max-width: 920px) { 
@@ -491,12 +491,17 @@
                     clear: both;
                     border: 8px solid #000000;
                 }
+                #CurrentInitiatives{
+                    left:23%;
+                    top:1680px;
+                }
                 #InProgress{
-                    top:1805px;
-                    left:150px;
+                    top:1780px;
+                    left:40%;
                 }
                 #Initiatives{
-                    left:150px;
+                    left:34%;
+                    top:1840px;
                 }
             }
         </style>
