--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 top: 0;
                 z-index:3;
             }
-            a:-webkit-any-link:not(.icon):not(.Involvements) {
+            a:-webkit-any-link:not(.icon):not(.Involvements):not(#CallToAction) {
                 color: inherit;
                 text-decoration: none;
                 display: inherit;
@@ -389,6 +389,24 @@
                 display: inline-block;
                 z-index: 3;
             }
+            #CallToAction{
+                position:relative;
+                top: 60px;
+                color: white;
+                font-family:Montserrat;
+                font-size: clamp(0.81rem, 1.71vw, 6.6rem);
+                display: inline-block;
+                text-align: center;
+                line-height: 1.9;
+            }
+            #CallToAction i {
+                font-style: underline !important;
+                font-size: clamp(1rem, 2.24vw, 6.9rem);
+            }
+            #CallToAction a i {
+                color: #bcff9d !important;
+                font-weight: bold;
+            }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
                     display: none;
@@ -632,6 +650,8 @@
             <li>AB1423 (PFAS Ban) passed floor vote 9/14/23</li>
             <li>SB499 (Heat Mitigation) and AB38 (Night Sky)</li>
         </ul>
+        <p id = "CallToAction">For sign-ups, petitions, articles, and more:<br><i>Find us here</i></p>
+</p>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
