--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 top: 0;
                 z-index:3;
             }
-            a:-webkit-any-link:not(.icon):not(.Involvements):not(.CallToAction) {
+            a:-webkit-any-link:not(.icon):not(.Involvements):not(.CallToAction a) {
                 color: inherit;
                 text-decoration: none;
                 display: inherit;
@@ -405,19 +405,19 @@
                 font-style: inherit !important;
                 font-size: clamp(1.1rem, 2.26vw, 6.9rem);
             }
-            .CallToAction a i {
+            .CallToAction a {
                 color: #bcff9d !important;
                 font-weight: bold;
                 text-decoration:underline;
             }
-            .CallToAction ArrowOnLeft{
+            .CallToAction .ArrowOnLeft{
                 position:relative;
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
                 right:30%;
                 width:6vw;
             }
-            .CallToAction ArrowOnRight{
+            .CallToAction .ArrowOnRight{
                 position:relative;
                 left:30%;
                 width:6vw;
@@ -511,6 +511,10 @@
                 }
                 .CallToAction{
                     top:2128px
+                    font-size:23px;
+                }
+                .CallToAction i {
+                    font-size:26px;
                 }
                 #horizline{
                     top:2205px;
