--- a/index.html
+++ b/index.html
@@ -410,14 +410,14 @@
                 font-weight: bold;
                 text-decoration:underline;
             }
-            .CallToAction .ArrowOnLeft{
+            .ArrowOnLeft{
                 position:relative;
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
                 right:30%;
                 width:6vw;
             }
-            .CallToAction .ArrowOnRight{
+            .ArrowOnRight{
                 position:relative;
                 left:30%;
                 width:6vw;
