--- a/index.html
+++ b/index.html
@@ -507,10 +507,10 @@
                     top:1720px;
                 }
                 #Initiatives{
-                    top:1800px
+                    top:1800px;
                 }
                 .CallToAction{
-                    top:2128px
+                    top:2128px;
                     font-size:23px;
                 }
                 .CallToAction i {
