--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 z-index: 3;
             }
             #Initiatives {
-                font-size: clamp(0.9rem, 1.8vw, 6.7rem);
+                font-size: clamp(1rem, 2vw, 6.7rem);
                 font-family:Montserrat;
                 position: absolute;
                 float: left;
@@ -515,6 +515,7 @@
                 }
                 .CallToAction i {
                     font-size:26px;
+                    width:100vw;
                 }
                 #horizline{
                     top:2205px;
@@ -545,15 +546,15 @@
                     border: 8px solid #000000;
                 }
                 #CurrentInitiatives{
-                    left:23%;
+                    left:7%;
                     top:1680px;
                 }
                 #InProgress{
                     top:1780px;
-                    left:40%;
+                    left:18%;
                 }
                 #Initiatives{
-                    left:34%;
+                    left:9%;
                     top:1840px;
                 }
             }
