--- a/index.html
+++ b/index.html
@@ -411,16 +411,17 @@
                 text-decoration:underline;
             }
             .ArrowOnLeft{
-                position:relative;
+                position:absolute;
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
                 right:30%;
-                width:6vw;
+                width:3.9vw;
             }
             .ArrowOnRight{
-                position:relative;
+                position:absolute;
                 left:30%;
-                width:6vw;
+                width:3.9vw;
+                top: 412px !important;
             }
             #horizline{
                     position: absolute;
