--- a/index.html
+++ b/index.html
@@ -410,18 +410,17 @@
                 font-weight: bold;
                 text-decoration:underline;
             }
-            .ArrowOnLeft{
+            .ArrowOnLeft, .ArrowOnRight{
                 position:absolute;
+                width:3.9vw !important;
+            }
+            .ArrowOnLeft{
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
                 right:30%;
-                width:3.9vw;
             }
             .ArrowOnRight{
-                position:absolute;
                 left:30%;
-                width:3.9vw;
-                top: 412px !important;
             }
             #horizline{
                     position: absolute;
