--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
                 display: inline-block;
                 text-align: center;
                 line-height: 2.8;
+                z-index:2;
             }
             .CallToAction i {
                 font-style: inherit !important;
@@ -413,14 +414,16 @@
             .ArrowOnLeft, .ArrowOnRight{
                 position:absolute;
                 width:3.9vw !important;
+                top: 2167px !important
+                z-index:1;
             }
             .ArrowOnLeft{
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
-                right:30%;
+                left: 21%;
             }
             .ArrowOnRight{
-                left:30%;
+                left:77%;
             }
             #horizline{
                     position: absolute;
