--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
             .ArrowOnLeft, .ArrowOnRight{
                 position:absolute;
                 width:3.9vw !important;
-                top: 2167px !important
-                z-index:1;
+                top: 2167px !important;
+                z-index: 1;
             }
             .ArrowOnLeft{
                 -webkit-transform: scaleX(-1);
@@ -467,19 +467,20 @@
                     float:left;
                     clear:both;
                     margin-left: 10% !important;
-                    margin-bottom:-15px;
+                    margin-bottom:-26px;
                     left:0;
                 }
                 .TransparencyGradients{
                     display:none;
                 }
                 .MiniFooter{
-                    top:calc(73.8% + 19px);
-                    margin-right:13px;
+                    top:calc(73.8% + 9px);
+                    margin-right:10px;
                     width: 100%;
                     width: -moz-available;   
                     width: -webkit-fill-available;  
                     width: fill-available;
+                    left:10px;
                 }
                 .Involvements{
                     width: 100%;
@@ -489,7 +490,7 @@
                     left:10px;
                     top:10px;
                     margin-right:10px;
-                    margin-bottom:10px;
+                    margin-bottom:0px;
                     height:73.8%;
                     line-height:0.89;
                 }
@@ -498,6 +499,13 @@
                 }
                 .Involvements ul {
                     font-size: 15px;
+                }
+                .Third{
+                    top: calc(73.8% + 25px) !important;
+                    height: 83.1% !important;
+                }
+                .box3{
+                    height:189px;
                 }
                 .rectangle{
                     margin-top:60px;
@@ -680,7 +688,7 @@
                 <div class = "MiniFooter"></div>
             </div>
             <div class = "TransparentBoxes box3">
-                <section class = "Involvements">
+                <section class = "Involvements Third">
                     <p>Holiday Outings</p>
                     <ul>
                       <li>Optional birdwatching and hiking</li>
