--- a/index.html
+++ b/index.html
@@ -482,6 +482,10 @@
                     width: fill-available;
                     left:10px;
                 }
+                .Three{
+                    height:11%;
+                    top: calc(73.8% + 19px);
+                }
                 .Involvements{
                     width: 100%;
                     width: -moz-available;   
@@ -501,7 +505,6 @@
                     font-size: 15px;
                 }
                 .Third{
-                    top: calc(73.8% + 25px) !important;
                     height: 83.1% !important;
                 }
                 .box3{
@@ -703,7 +706,7 @@
                     </ul>
                 </section>
                 <div class = "TransparencyGradients"></div>
-                <div class = "MiniFooter"></div>
+                <div class = "MiniFooter Three"></div>
             </div>
         </div>
         <h2 id = "CurrentInitiatives">Current<br>Initiatives</h2>
