--- a/index.html
+++ b/index.html
@@ -529,12 +529,13 @@
                 }
                 .ArrowOnLeft, .ArrowOnRight{
                     top: 2167px !important;
+                    width:46px !important;
                 }
                 .ArrowOnRight{
-                    left: calc(50% - 300px);
+                    left: calc(50% + 300px) !important;
                 }
                 .ArrowOnLeft{
-                    left: calc(50% + 300px);
+                    left: calc(50% - 300px) !important;
                 }
                 #horizline{
                     top:2205px;
