--- a/index.html
+++ b/index.html
@@ -415,10 +415,15 @@
                 position:absolute;
                 width:3.9vw !important;
                 z-index: 1;
+                top: 2137px;
             }
             .ArrowOnLeft{
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
+                left: 25%;
+            }
+            .ArrowOnRight{
+                left: 75%;
             }
             #horizline{
                     position: absolute;
@@ -535,7 +540,7 @@
                     left: calc(50% + 300px) !important;
                 }
                 .ArrowOnLeft{
-                    left: calc(50% - 300px) !important;
+                    left: calc(50% - 320px) !important;
                 }
                 #horizline{
                     top:2205px;
