--- a/index.html
+++ b/index.html
@@ -415,15 +415,15 @@
                 position:absolute;
                 width:3.9vw !important;
                 z-index: 1;
-                top: 2137px;
+                top: 185.4vw !important;
             }
             .ArrowOnLeft{
                 -webkit-transform: scaleX(-1);
                 transform: scaleX(-1);
-                left: 25%;
+                left: 22%;
             }
             .ArrowOnRight{
-                left: 75%;
+                left: 76%;
             }
             #horizline{
                     position: absolute;
@@ -727,7 +727,7 @@
             <li>AB1423 (PFAS Ban) passed floor vote 9/14/23</li>
             <li>SB499 (Heat Mitigation) and AB38 (Night Sky)</li>
         </ul>
-        <p class = "CallToAction">For signing up, petitions, articles, and more:<br><i>Join us <a href = "https://linktr.ee/environmental_action_club">here</a></i></p>
+        <p class = "CallToAction">For sign-ups, social media, petitions and more:<br><i>Join us <a href = "https://linktr.ee/environmental_action_club">here</a></i></p>
         <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
