--- a/index.html
+++ b/index.html
@@ -583,9 +583,14 @@
                     top:1840px;
                 }
             }
+            @media screen and (max-width: 690px) { 
+                .ArrowOnLeft, .ArrowOnRight{
+                    display: none;
+                }
+            }
             @media screen and (max-width: 501px) { 
                 .CallToAction{
-                    font-size:19px
+                    font-size:19px;
                 }
             }
             @media screen and (max-width: 376px){
