--- a/index.html
+++ b/index.html
@@ -593,6 +593,12 @@
                     font-size:19px;
                 }
             }
+            @media screen and (max-width: 442px) { 
+                .CallToAction{
+                    top:2099px;
+                    line-height:2.4;
+                }
+            }
             @media screen and (max-width: 376px){
                 .Involvements{
                     line-height:0.8;
