--- a/index.html
+++ b/index.html
@@ -435,6 +435,13 @@
                     left: 36%;
                     text-align: center;
             }
+            .Footer{
+                padding:0;
+                margin:0;
+                margin-top: 20px;
+                text-align: center;
+                background:#1d3712ff;
+            }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
                     display: none;
@@ -742,6 +749,9 @@
         <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
+        <div class="Footer">
+          <p>Footer</p>
+        </div>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
