--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 margin:0;
                 margin-top: 20px;
                 text-align: center;
-                background:#1d3712ff;
+                color: #95dc76;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
