--- a/index.html
+++ b/index.html
@@ -435,12 +435,15 @@
                     left: 36%;
                     text-align: center;
             }
-            .Footer{
-                padding:0;
-                margin:0;
-                margin-top: 20px;
+            .Footer{  
+                position: absolute;
+                padding: 0;
+                margin: 0;
+                bottom:100px;
+                right:55%;
                 text-align: center;
                 color: #95dc76;
+                font-family: Arial, sans-serif;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
