--- a/index.html
+++ b/index.html
@@ -753,7 +753,19 @@
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
         <div class="Footer">
-          <p>Footer</p>
+            <h3>About</h3>
+            <p>
+                <a>About us</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
+            </p>
+        </div>
+        <div class="Footer2">
+            <h3>Contact</h3>
+            <p>
+                <a href = "Saratoga.eac@gmail.com">Email</a>
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a>
+                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
+            </p>
         </div>
         <script>
             <!--JQuery imported because convenient-->
