--- a/index.html
+++ b/index.html
@@ -435,15 +435,21 @@
                     left: 36%;
                     text-align: center;
             }
-            .Footer{  
+            .Footer, .Footer2{  
                 position: absolute;
                 padding: 0;
                 margin: 0;
-                bottom:100px;
-                right:55%;
-                text-align: center;
+                margin-bottom:100px;
                 color: #95dc76;
                 font-family: Arial, sans-serif;
+            }
+            .Footer{
+                left:35%;
+                text-align: right;
+            }
+            .Footer2{
+                left:55%;
+                text-align: left;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
