--- a/index.html
+++ b/index.html
@@ -436,19 +436,19 @@
                     text-align: center;
             }
             .Footer, .Footer2{  
-                position: absolute;
+                position: fixed;
                 padding: 0;
                 margin: 0;
-                margin-bottom:100px;
+                bottom:10px;
                 color: #95dc76;
                 font-family: Arial, sans-serif;
             }
             .Footer{
-                left:35%;
+                left:100px;
                 text-align: right;
             }
             .Footer2{
-                left:55%;
+                left:200px;
                 text-align: left;
             }
             @media screen and (min-width: 921px) {
