--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     text-align: center;
             }
             .Footer, .Footer2{  
-                position: fixed;
+                position: absolute;
                 padding: 0;
                 margin: 0;
                 bottom:10px;
@@ -659,6 +659,21 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
+        <div class="Footer">
+            <h3>About</h3>
+            <p>
+                <a>About us</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
+            </p>
+        </div>
+        <div class="Footer2">
+            <h3>Contact</h3>
+            <p>
+                <a href = "Saratoga.eac@gmail.com">Email</a>
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a>
+                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
+            </p>
+        </div>
         <div class="introduction">
             <h2 class = "introTitle">Introduction</h2>
             <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
@@ -758,21 +773,6 @@
         <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
-        <div class="Footer">
-            <h3>About</h3>
-            <p>
-                <a>About us</a>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
-            </p>
-        </div>
-        <div class="Footer2">
-            <h3>Contact</h3>
-            <p>
-                <a href = "Saratoga.eac@gmail.com">Email</a>
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a>
-                <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
-            </p>
-        </div>
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
