--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
                 top: 0;
                 z-index:3;
             }
-            a:-webkit-any-link:not(.icon):not(.Involvements):not(.CallToAction a) {
-                color: inherit;
-                text-decoration: none;
-                display: inherit;
-            }
             .LinksMenu {
                 display: block;
                 display: none;
@@ -68,6 +63,9 @@
                 background-color: #2C4025;
                 color: #F5F5EF;
                 z-index: 3;
+                color: inherit !important;
+                text-decoration: none !important;
+                display: inherit !important;
             }
             .LinksMenu a:hover{
                 background-color: #348138;
@@ -439,16 +437,18 @@
                 position: absolute;
                 padding: 0;
                 margin: 0;
-                bottom:10px;
+                top:2343px;
                 color: #95dc76;
                 font-family: Arial, sans-serif;
+                z-index:2;
+                width: 19vw;
             }
             .Footer{
-                left:100px;
+                right:52%;
                 text-align: right;
             }
             .Footer2{
-                left:200px;
+                left:52%;
                 text-align: left;
             }
             @media screen and (min-width: 921px) {
@@ -662,15 +662,15 @@
         <div class="Footer">
             <h3>About</h3>
             <p>
-                <a>About us</a>
+                <a>About us</a> <br>
                 <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
             </p>
         </div>
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com">Email</a>
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a>
+                <a href = "Saratoga.eac@gmail.com">Email</a> <br>
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> <br>
                 <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
             </p>
         </div>
