--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 font-style: inherit !important;
                 font-size: clamp(1.1rem, 2.26vw, 6.9rem);
             }
-            .CallToAction a {
+            .CallToAction a, .Footer a, .Footer2 a {
                 color: #bcff9d !important;
                 font-weight: bold;
                 text-decoration:underline;
