--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
                 line-height:1.6;
                 font-size:1.7rem;
                 background-color: #2C4025;
-                color: #F5F5EF;
                 z-index: 3;
-                color: inherit !important;
-                text-decoration: none !important;
-                display: inherit !important;
             }
             .LinksMenu a:hover{
                 background-color: #348138;
+            }
+            .LinksMenu a{
+                color: #F5F5EF !important;
+                text-decoration: none !important;
+                display: inherit !important;
             }
             #referencePoint{
                 position: absolute;
@@ -404,9 +405,11 @@
                 font-style: inherit !important;
                 font-size: clamp(1.1rem, 2.26vw, 6.9rem);
             }
+            .CallToAction a{
+                font-weight: bold;
+            }
             .CallToAction a, .Footer a, .Footer2 a {
                 color: #bcff9d !important;
-                font-weight: bold;
                 text-decoration:underline;
             }
             .ArrowOnLeft, .ArrowOnRight{
@@ -662,15 +665,15 @@
         <div class="Footer">
             <h3>About</h3>
             <p>
-                <a>About us</a> <br>
+                <a>About us<br></a> 
                 <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
             </p>
         </div>
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com">Email</a> <br>
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> <br>
+                <a href = "Saratoga.eac@gmail.com">Email<br></a> 
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook<br></a> 
                 <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
             </p>
         </div>
