--- a/index.html
+++ b/index.html
@@ -665,15 +665,18 @@
         <div class="Footer">
             <h3>About</h3>
             <p>
-                <a>About us<br></a> 
+                <a>About us</a> 
+                <p><br></p>
                 <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
             </p>
         </div>
         <div class="Footer2">
             <h3>Contact</h3>
             <p>
-                <a href = "Saratoga.eac@gmail.com">Email<br></a> 
-                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook<br></a> 
+                <a href = "Saratoga.eac@gmail.com">Email</a> 
+                <p><br></p>
+                <a href= "https://www.facebook.com/groups/334285765697491/">Facebook</a> 
+                <p><br></p>
                 <a href= "https://www.instagram.com/eac_shs/">Instagram</a>
             </p>
         </div>
