--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             .ArrowOnRight{
                 left: 76%;
             }
-            #horizline{
+            #horizline, #LeftLine, #RightLine{
                     position: absolute;
                     top: 189.1vw;
                     height: 2px;
@@ -440,11 +440,14 @@
                 position: absolute;
                 padding: 0;
                 margin: 0;
-                top:2343px;
                 color: #95dc76;
                 font-family: Arial, sans-serif;
                 z-index:2;
-                width: 19vw;
+                line-height:.21;
+                top:201vw;
+            }
+            .Footer h3, .Footer2 h3{
+                margin-bottom:35px;
             }
             .Footer{
                 right:52%;
@@ -453,6 +456,16 @@
             .Footer2{
                 left:52%;
                 text-align: left;
+            }
+            #LeftLine, #RightLine{
+                top: 200vw;
+                background-color:#4f6346;
+            }
+            #LeftLine{
+                left:30%;
+            }
+            #RightLine{
+                right:30%;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -564,6 +577,13 @@
                 #horizline{
                     top:2205px;
                 }
+                .Footer, .Footer2{  
+                    top:2343px;
+                    font-size:1.4vw;
+                }
+                #LeftLine, #RightLine{
+                    top:2355px;
+                }
             }       
             @media screen and (max-width: 920px) { 
                 #halftone, .BannerButtons, .CustomLeaf {
@@ -667,7 +687,7 @@
             <p>
                 <a>About us</a> 
                 <p><br></p>
-                <a href= "https://linktr.ee/environmental_action_club">Sign up & other Important Links</a>
+                <a href= "https://linktr.ee/environmental_action_club">Sign up & other<br>Important Links</a>
             </p>
         </div>
         <div class="Footer2">
@@ -779,6 +799,8 @@
         <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="images/LeftArrow.png">
         <img class = "CallToAction ArrowOnRight" src="images/LeftArrow.png">
+        <hr id = "RightLine">
+        <hr id = "LeftLine">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
